--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.github.gwtmaterialdesign</groupId>
-    <artifactId>gwt-material-starter</artifactId>
+    <artifactId>gwt-material-calendar-demo</artifactId>
     <version>1.2</version>
 
     <packaging>war</packaging>
